T-6651 theme/standard-totara: Fixed IE layout bug

--- a/theme/standard-totara/styles_totara.css
+++ b/theme/standard-totara/styles_totara.css
@@ -1983,8 +1983,6 @@ h2.guidesteptitle.active {
 .guideindextitle {
     font-weight:bold;
 }
-.guideindexlink {
-}
 
 .guideindexindication {
     width: 260px;
